--- a/time/2021-12-30_1300_SDLGame/SDLGame/SDLGame.vcxproj.filters
+++ b/time/2021-12-30_1300_SDLGame/SDLGame/SDLGame.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="SDLGame.cpp">
+    <ClCompile Include="src\SDLGame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
