--- a/time/2021-12-30_1300_SDLGame/SDLGame/SDLGame.vcxproj
+++ b/time/2021-12-30_1300_SDLGame/SDLGame/SDLGame.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClCompile Include="src\Enemy.cpp" />
     <ClCompile Include="src\Game.cpp" />
+    <ClCompile Include="src\InputHandler.cpp" />
     <ClCompile Include="src\LoaderParams.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\SDLGame.cpp" />
@@ -164,6 +165,7 @@
     <ClInclude Include="src\Enemy.h" />
     <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\GameObject.h" />
+    <ClInclude Include="src\InputHandler.h" />
     <ClInclude Include="src\LoaderParams.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\SDLGameObject.h" />
