SDL: Chapter 5: Step 5: Add GameOverState, PauseState. Add PlayState::checkCollision. Add AnimatedGraphic for menus.

--- a/time/2021-12-30_1300_SDLGame/SDLGame/SDLGame.vcxproj
+++ b/time/2021-12-30_1300_SDLGame/SDLGame/SDLGame.vcxproj
@@ -151,13 +151,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\AnimatedGraphic.cpp" />
     <ClCompile Include="src\Enemy.cpp" />
     <ClCompile Include="src\Game.cpp" />
+    <ClCompile Include="src\GameOverState.cpp" />
     <ClCompile Include="src\GameStateMachine.cpp" />
     <ClCompile Include="src\InputHandler.cpp" />
     <ClCompile Include="src\LoaderParams.cpp" />
     <ClCompile Include="src\MenuButton.cpp" />
     <ClCompile Include="src\MenuState.cpp" />
+    <ClCompile Include="src\PauseState.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\PlayState.cpp" />
     <ClCompile Include="src\SDLGame.cpp" />
@@ -166,15 +169,18 @@
     <ClCompile Include="src\Vector2D.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\AnimatedGraphic.h" />
     <ClInclude Include="src\Enemy.h" />
     <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\GameObject.h" />
+    <ClInclude Include="src\GameOverState.h" />
     <ClInclude Include="src\GameState.h" />
     <ClInclude Include="src\GameStateMachine.h" />
     <ClInclude Include="src\InputHandler.h" />
     <ClInclude Include="src\LoaderParams.h" />
     <ClInclude Include="src\MenuButton.h" />
     <ClInclude Include="src\MenuState.h" />
+    <ClInclude Include="src\PauseState.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\PlayState.h" />
     <ClInclude Include="src\SDLGameObject.h" />
