--- a/time/2021-12-30_1300_SDLGame/SDLGame/SDLGame.vcxproj.filters
+++ b/time/2021-12-30_1300_SDLGame/SDLGame/SDLGame.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="src\GameOverState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Dependencies\tinyxml2\src\tinyxml2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Game.h">
